--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react"
-  },
+  },  
   "include": [
-    "src"
+    "src", "craco.config.js"
   ]
 }
